# Codeit

./: .gitignore  pyproject.toml
STEP 2 데이터 사이언스 기초/: README.md
STEP 2 데이터 사이언스 기초/01. 데이터 사이언스 시작하기/: 01.py  03.ipynb  04.ipynb  README.md
머신러닝 & 딥러닝/STEP 2 데이터 사이언스 기초/01. 데이터 사이언스 시작하기/: 02.py
머신러닝 & 딥러닝/STEP 2 데이터 사이언스 기초/03. 데이터 분석과 시각화/: 01.ipynb  gdp.csv
머신러닝 & 딥러닝/STEP 3 머신 러닝/02. 기본 지도 학습 알고리즘들/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  README.md
